==> mstrens/oXs_on_RP2040/src/lora.cpp <==
#include "lora.h"
#include "hardware/spi.h"
#include "tools.h"
#include <stdio.h>
#include "pico/stdlib.h"
#include "config.h"
#include "param.h"
#define LORA_REG_FIFO                               0x00  //oXsTx     Receiver
#define LORA_REG_OP_MODE                            0x01  // should be 0b10000xxx
#define LORA_REG_PA_CONFIG                          0x09  //power amplifier source and value eg. 0x8F for 17dbm on PA_boost
#define LORA_REG_PA_RAMP                            0x0A  //power amplifier ramp: only bits 3-0; ex: 1000= 62usec; default = 0x09 = 125usec
#define LORA_REG_OCP                                0x0B  // current protection: could be 0b00111011 (enabled at 240 ma)
#define LORA_REG_LNA                                0x0C  // gain in reception ex: 0b00100011max gain, no boost on LNA)
#define LORA_REG_FIFO_ADDR_PTR                      0x0D  // address of current byte to be read/writen in Fifo
#define LORA_REG_FIFO_TX_BASE_ADDR                  0x0E  // base of Tx fifo; default 0x80
#define LORA_REG_FIFO_RX_BASE_ADDR                  0x0F  // base of Rx fifo; default 0x00
#define LORA_REG_FIFO_RX_CURRENT_ADDR               0x10  // adress of start of last Rx packet received (can't be written)
#define LORA_REG_IRQ_FLAGS_MASK                     0x11  // Irq flag mask
#define LORA_REG_IRQ_FLAGS                          0x12  // Irq flags (write 1 to bit to clear); write 0xFF clear all flags

void initSpi(){     // configure the SPI
    spi_init(SPI_PORT, 1000 * 1000);
    gpio_set_function(config.pinSpiMiso, GPIO_FUNC_SPI);
    gpio_set_function(config.pinSpiSck, GPIO_FUNC_SPI);
    gpio_set_function(config.pinSpiMosi, GPIO_FUNC_SPI);
    
    // Chip select is active-low, so we'll initialise it to a driven-high state
    gpio_init(config.pinSpiCs);
    gpio_set_dir(config.pinSpiCs, GPIO_OUT);
    gpio_put(config.pinSpiCs, 1);
    
//  DDRB |= (1<<2)|(1<<3)|(1<<5);    // SCK, MOSI and SS as outputs on PORTB (PB2,PB3,PB5)
//  DDRB &= ~(1<<4);                 // MISO as input (PB4)
//  PORTB |= (1<<2)  ;                // Set chip select high (PB2)
  
//  SPCR =  (1<<MSTR) |               // Set as Master, send most significant bit first (because bit is left on 0)
//          (1<<SPR0) |               // divided clock by 16 (so 1mhz)
//          (1<<SPE);                 // Enable SPI, disable interrupt (bit7 on 0)
//  SPSR = 1 ;                        // Bit0 allows to multiply frequency by 2 (in master mode)

    // here we can read a register (like the version ) to check if the module is connected
    uint8_t loraVersion = loraReadRegister(LORA_REG_VERSION); 
    if( loraVersion != 0x12) {
        locatorInstalled = false;
    } else {
        locatorInstalled = true;
    }
}

uint8_t spiSend(uint8_t value){
  uint8_t response;
  spi_write_read_blocking(SPI_PORT, &value, &response, 1);
  return response;
  //uint8_t result;
  //SPDR = value; //shift the first byte of the value
  //while(!(SPSR & (1<<SPIF))); //wait for the SPI bus to finish
  //result = SPDR; //get the received data
  //return result;
}

uint8_t loraSingleTransfer(uint8_t reg, uint8_t value) {  // only for internal use; Write and read one LORA register
  uint8_t response;
  SPI_SELECT ;
  spi_write_blocking(SPI_PORT, &reg, 1);
  spi_write_read_blocking(SPI_PORT, &value, &response, 1);
  SPI_UNSELECT ;
  return response;
}

void loraReadRegisterBurst( uint8_t reg, uint8_t* dataIn, uint8_t numBytes) {
  SPI_SELECT ;
  uint8_t readReg = reg  & 0x7f; 
  spi_write_blocking(SPI_PORT, &readReg, 1);
  spi_read_blocking (SPI_PORT, 0, dataIn, numBytes);
  //spiSend(reg & 0x7f);
  //for(size_t n = 0; n < numBytes; n++) {
  //      dataIn[n] = spiSend(0x00);
  //}
  SPI_UNSELECT ;
}

void loraWriteRegisterBurst( uint8_t reg, uint8_t* dataOut, uint8_t numBytes) {
  SPI_SELECT ;
  uint8_t writeReg = reg | 0x80; 
  spi_write_blocking(SPI_PORT, &writeReg, 1);
  spi_write_blocking(SPI_PORT, dataOut, numBytes); 
  //spiSend(reg | 0x80);
  //for(size_t n = 0; n < numBytes; n++) {
  //      spiSend(dataOut[n]);
  //}
  SPI_UNSELECT ;
}

void loraHandle(){   // this function is called from main.cpp only when pinSpiCs is not equal to 255
  uint8_t loraIrqFlags ;
  static uint32_t loraStateMillis ;
  //static uint32_t receiveMillis ;
  uint32_t currentMillis = millisRp() ;
  //printf("%i\n",loraState);
  //printf("%u\n",loraStateMillis ) ;
  switch (loraState) { 
    case  LORA_TO_INIT :
        initSpi();   // init spi
        loraSetup() ; // init lora with some set up that need to be done only once
        loraState = LORA_IN_SLEEP ;
        loraStateMillis = currentMillis + SLEEP_TIME ;
        printf("End of init\n") ;
        break ;
    case  LORA_IN_SLEEP :
        if (currentMillis > loraStateMillis ){ 
          //printf("End of sleep; enter receive mode for 5 sec\n");
          printf("Li ");
          loraRxOn(); 
          loraState = LORA_IN_RECEIVE ; 
          loraStateMillis = currentMillis + SHORT_RECEIVE_TIME ;
        }
        break;    
    case  LORA_IN_RECEIVE :
        // check if a packet has been received with a correct CRC
        loraIrqFlags = loraReadRegister(LORA_REG_IRQ_FLAGS);
        if ( loraIrqFlags & IRQ_RX_DONE_MASK  ) {
          if ( loraIrqFlags & IRQ_PAYLOAD_CRC_ERROR_MASK) {
            printf("wrong crc received\n") ;
            loraRxOn() ; // restart reading in continous mode if CRC is wrong (reset address and interrupt)
          } else {
              loraReadPacket() ; // read the data in fifo (type and TxPower) and Rssi+SNR 
              loraInSleep() ;
              loraState = LORA_TO_TRANSMIT;
              //printf("packet received\n") ;
                printf("Re ");
          }
        } else if (currentMillis > loraStateMillis) {
           //printf("receive timeout; go to sleep\n") ;
            printf("Sl \n");
           loraInSleep() ;
           loraState = LORA_IN_SLEEP;
           loraStateMillis = currentMillis + SLEEP_TIME ;
        }
        break;
    case  LORA_TO_TRANSMIT :
        loraFillTxPacket() ; // set mode to standby, fill fifo with data to be sent (6 bytes)  
        loraTxOn(loraRxPacketTxPower) ; // set TxOn  (adjust frequency, number of bytes, Txpower, start Tx)  // set lora in transmit mode
        loraStateMillis = currentMillis + 400 ; // start a timeout ; normally sending is done in less than 200msec
        loraState = LORA_WAIT_END_OF_TRANSMIT ;
        //printf("packet redy for sending\n") ;
        printf("Se "); 
        break;
    case  LORA_WAIT_END_OF_TRANSMIT :
        // check if transmit is done or if timeout occurs
        // if transmitted, put lora in receive, change loraState to LORA_IN_RECEIVE , change loraStateMillis = currentMillis+LONG_RECEIVE
        // else, if timeOut, go in sleep for the SLEEP_TIME
        loraIrqFlags = loraReadRegister(LORA_REG_IRQ_FLAGS);
        if ( loraIrqFlags & IRQ_TX_DONE_MASK ) {
            //printf("packet has been sent; go to receive for 60sec\n") ;
            printf("Es\n");
            loraRxOn();
            loraState = LORA_IN_RECEIVE ; 
            loraStateMillis = currentMillis + LONG_RECEIVE_TIME ;
        } else if ( currentMillis > loraStateMillis ) {
            printf("transmit timeout; go to sleep for 55sec\n") ;
            loraInSleep() ;
            loraState = LORA_IN_SLEEP;
            loraStateMillis = currentMillis + SLEEP_TIME ;
        }
        
        break;

    } // end of switch
}

void loraReadPacket()            // read a packet with 2 bytes ; PacketType and PacketTxPower
{
  loraRxPacketRssi = ((int16_t) loraReadRegister( LORA_REG_PKT_RSSI_VALUE ))  - 157;
  loraRxPacketSnr = loraReadRegister( LORA_REG_PKT_SNR_VALUE );
  loraWriteRegister(LORA_REG_FIFO_ADDR_PTR, 0);        //set RX FIFO ptr
  SPI_SELECT ;       // start of read burst on fifo
  spiSend(LORA_REG_FIFO);                //address for fifo
  loraRxPacketType = spiSend(0);
  loraRxPacketTxPower = spiSend(0);
  SPI_UNSELECT ;
  //printf("Rssi=%i Snr=%i Type=%i  pow=%i\n", loraRxPacketRssi , loraRxPacketSnr, loraRxPacketType , loraRxPacketTxPower ) ;
  printf("Rssi=%i \n", loraRxPacketRssi);
}
