==> openXsensor/openXsensor/locator_receive/lora.cpp <==
#include "config.h"
#include "lora.h"
#include <avr/pgmspace.h>
#define LORA_REG_FIFO                               0x00  //oXsTx     Receiver
#define LORA_REG_OP_MODE                            0x01  // should be 0b10000xxx
#define LORA_REG_FRF_MSB                            0x06  //frequency (in steps of 61.035 Hz)
#define LORA_REG_FRF_MID                            0x07  //frequency
#define LORA_REG_FRF_LSB                            0x08  //frequency
#define LORA_REG_PA_CONFIG                          0x09  //power amplifier source and value eg. 0x8F for 17dbm on PA_boost
#define LORA_REG_PA_RAMP                            0x0A  //power amplifier ramp: only bits 3-0; ex: 1000= 62usec; default = 0x09 = 125usec
#define LORA_REG_OCP                                0x0B  // current protection: could be 0b00111011 (enabled at 240 ma)
#define LORA_REG_LNA                                0x0C  // gain in reception ex: 0b00100011max gain, no boost on LNA)
#define LORA_REG_FIFO_ADDR_PTR                      0x0D  // address of current byte to be read/writen in Fifo
#define LORA_REG_FIFO_TX_BASE_ADDR                  0x0E  // base of Tx fifo; default 0x80
#define LORA_REG_FIFO_RX_BASE_ADDR                  0x0F  // base of Rx fifo; default 0x00
#define LORA_REG_FIFO_RX_CURRENT_ADDR               0x10  // adress of start of last Rx packet received (can't be written)
#define LORA_REG_IRQ_FLAGS_MASK                     0x11  // Irq flag mask

void initSpi(){     // configure the SPI
  DDRB |= (1<<2)|(1<<3)|(1<<5);    // SCK, MOSI and SS as outputs on PORTB (PB2,PB3,PB5)
  DDRB &= ~(1<<4);                 // MISO as input (PB4)
  PORTB |= (1<<2)  ;                // Set chip select high (PB2)
  
  SPCR =  (1<<MSTR) |               // Set as Master, send most significant bit first (because bit is left on 0)
          (1<<SPR0) |               // divided clock by 16
          (1<<SPE);                 // Enable SPI, disable interrupt (bit7 on 0)
  SPSR = 1 ;                        // Bit0 allows to multiply frequency by 2 (in master mode)
}

uint8_t spiSend(uint8_t value){
  uint8_t result;
  SPDR = value; //shift the first byte of the value
  while(!(SPSR & (1<<SPIF))); //wait for the SPI bus to finish
  result = SPDR; //get the received data
  return result;
}

uint8_t loraSingleTransfer(uint8_t reg, uint8_t value) {  // only for internal use; Write and read one LORA register
  uint8_t response;
  SPI_SELECT ;
  spiSend(reg);
  response = spiSend(value);
  SPI_UNSELECT ;
  return response;
}

void loraReadRegisterBurst( uint8_t reg, uint8_t* dataIn, uint8_t numBytes) {
  SPI_SELECT ;
  spiSend(reg & 0x7f);
  for(size_t n = 0; n < numBytes; n++) {
        dataIn[n] = spiSend(0x00);
  }
  SPI_UNSELECT ;
}

void loraWriteRegisterBurst( uint8_t reg, uint8_t* dataOut, uint8_t numBytes) {
  SPI_SELECT ;
  spiSend(reg | 0x80);
  for(size_t n = 0; n < numBytes; n++) {
        spiSend(dataOut[n]);
  }
  SPI_UNSELECT ;
}

uint8_t  loraHandle(){ 
  uint8_t returnCode = 0 ; // just for debugging (= 1 is we are just transmitting)
  uint8_t loraIrqFlags ;
  static uint8_t loraState = 0 ;
  static uint32_t loraStateMillis ;
  static uint32_t loraNextTransmitMillis = 0;
  
  uint32_t currentMillis = millis() ;
  switch (loraState) {
    case  LORA_TO_INIT :
        initSpi();   // init spi
        loraSetup() ; // init lora with some set up that need to be done only once
        loraState = LORA_IN_RECEIVE ;
        for (int i = 0; i < 128; i++) {
            Serial.print("0x");
            Serial.print(i, HEX);
            Serial.print(": 0x");
            Serial.println(loraReadRegister(i), HEX);
        }
        loraRxOn();
        break ;
    /*
    case  LORA_START_TO_TRANSMIT :
        loraFillTxPacket() ; // set mode to standby, fill fifo with data to be sent (2 bytes)  
        loraTxOn(0x15) ; // set TxOn  (adjust frequency, number of bytes, Txpower = 15=max, start Tx)  // set lora in transmit mode
        loraNextTransmitMillis = currentMillis + NEXT_TRANSMIT_TIME ; // setup next transmit time
        loraMaxEndTransmitMillis = currentMillis + 1000 ;
        loraState = LORA_WAIT_END_OF_TRANSMIT ;
        Serial.println("transmit one packet") ;
        returnCode = 1 ;
        break;
    case  LORA_WAIT_END_OF_TRANSMIT :
        // check if transmit is done or if timeout occurs
        // if transmitted, put lora in receive, change loraState to LORA_IN_RECEIVE , change loraStateMillis = currentMillis+LONG_RECEIVE
        // else, if timeOut, go in sleep for the SLEEP_TIME
        loraIrqFlags = loraReadRegister(LORA_REG_IRQ_FLAGS);
        if ( loraIrqFlags & IRQ_TX_DONE_MASK ) {
            // Added to debug
            Serial.println("Packet has been sent") ; 
            loraInSleep() ;
            loraState = LORA_IN_SLEEP ;
            
            // put as comment to debug
            //loraRxOn();
            //loraState = LORA_IN_RECEIVE ; 
            //loraStateMillis = currentMillis + RECEIVE_TIME ;
            
        } else if ( currentMillis > loraMaxEndTransmitMillis  ) { // loraStateMillis
            Serial.println("Packet not sent within the delay") ;
            loraInSleep() ;
            loraState = LORA_IN_SLEEP ;
        }
        break;
    */
    case  LORA_IN_SLEEP :
        if (currentMillis > loraNextTransmitMillis ){ 
          loraState = LORA_START_TO_TRANSMIT ; 
        }
        break;    
    case  LORA_IN_RECEIVE :
        // check if a packet has been received with a correct CRC
        loraIrqFlags = loraReadRegister(LORA_REG_IRQ_FLAGS);
        if ( loraIrqFlags & IRQ_RX_DONE_MASK  ) {
          if ( loraIrqFlags & IRQ_PAYLOAD_CRC_ERROR_MASK) {
            Serial.println("CRC error") ;
            loraReadPacket() ; // read the data in fifo 2 bytes 
              loraInSleep() ;    // to debug ; put in sleep to reset the fifo
              loraRxOn();        // back in continuous receive
       
            //loraInSleep() ;
            //loraState = LORA_IN_SLEEP; 
          } else {
              loraReadPacket() ; // read the data in fifo 2 bytes 
              loraInSleep() ;    // to debug ; put in sleep to reset the fifo
              loraRxOn();        // back in continuous receive
              //loraState = LORA_IN_SLEEP;
              returnCode=2;
          }
        } 
        //else if (currentMillis > loraStateMillis) {
        //   loraInSleep() ;
        //   loraState = LORA_IN_SLEEP ;
        //}
        break;
    
    } // end of switch
    return returnCode ;
}

void loraReadPacket() {            // read a packet with 6 bytes ; 
  // in order to stay with 6 bytes per packet, we will send 1 byte with
  //         Bit 7/ 0 = Long, 1=Lat ; this is type of packet
  //         Bit 6/3 = GPS accuracy 0= very good; 15 = bad (we discard décimal); it is gps_HDOP/128, if >15, then becomes 15
  //         Bit 2 = gps oldier than than 1h
  //         Bit 1 = oldier than 10 min
  //         Bit 0 = oldier than 1 min
  //         Then there is one byte with Rssi and 4 bytes for long/lat (or replaced by 00 if GPS is unavailable)
  //         Note: gps_last_fix_lon and lat are filled with last value when a fix was available and if a fix has never been available they are filled with 0

  uint8_t loraRxBuffer[6] ;
  uint8_t oXsPacketType ; // specify if oXs packet is long or lat
  int32_t oXsGpsLonLat ;    // lon or lat sent by gps
  
  loraLastPacketReceivedMillis = millis() ;
  loraRxPacketRssi = loraReadRegister( LORA_REG_PKT_RSSI_VALUE ) - 157;
  loraRxPacketSnr = loraReadRegister( LORA_REG_PKT_RSSI_VALUE )* 0.25 ;
  loraWriteRegister(LORA_REG_FIFO_ADDR_PTR, 0);        //set RX FIFO ptr
  loraWriteRegister(LORA_REG_OP_MODE, 0x80 | LORA_STANDBY) ; //  set mode in standby (to read FIFO)
  loraReadRegisterBurst( LORA_REG_FIFO , loraRxBuffer, 2) ; // read the 6 bytes in lora fifo
  Serial.print("buffer0= ") ; Serial.println(loraRxBuffer[0] , HEX );
  Serial.print("buffer1= ") ; Serial.println(loraRxBuffer[1] , HEX );
  //oXsPacketType = (loraRxBuffer[0] >> 7 ) ; // bit 7 gives the type of gps data
  //oXsGpsLonLat = (((uint32_t) loraRxBuffer[2] ) << 24) || (((uint32_t) loraRxBuffer[3] ) << 16) || (((uint32_t) loraRxBuffer[4] ) << 8) || ((uint32_t) loraRxBuffer[5] ) ; 
  //if (oXsGpsLonLat != 0 ) {
  //    loraLastGpsPacketReceivedMillis = loraLastPacketReceivedMillis ;
  //    if (  oXsPacketType ) {
  //      lastGpsLat = oXsGpsLonLat ;
  //    } else {
  //      lastGpsLon = oXsGpsLonLat ;
  //    }
  //}
  //oXsGpsPdop =  (loraRxBuffer[0] >> 3 ) & 0x0F ; // bit 6/3 gives the type of gps precision (normally it is in 0.01 but we put it in 1/128 for faster conversion and we loose decimal)
  //oXsLastGpsDelay = (loraRxBuffer[0]  ) & 0x07 ; // code in 3 bits of the time enlapsed since previous GPS fix at oXs side
  //oXsPacketRssi =  loraRxBuffer[1] ; // RSSI of last byte received by oXS
  
}
